--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ricky Huang</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!----JavaScript---->
     <script src=index.js></script>
+    
+    <!----Top Bar---->
+    <div class="topnav">
+        <a href="#home" class="left-side">Home</a>
+        <a href="#aboutme" class="left-side">About Me</a>
+        <a href="#projects" class="left-side">Projects</a>
+        <a href="#contactme" class="left-side">Contact Me</a>
+        <a href="https://www.dropbox.com/s/8gjnfwjmucxa0dh/Ricky%20Huang%20Resume%20V3.pdf?dl=0" target=_blank class="right-side">Resume</a>
+        <a href="https://www.linkedin.com/in/ricky-zi-an-huang/" target=_blank class="right-side">LinkedIn</a>
+        <a href="https://www.github.com/Ricky-H142" target=_blank class="right-side">GitHub</a>
+    </div>
+
+    <!----Header---->
+    <h1 id="home">Ricky Huang</h1>
+
+    <!----About Me---->
+    <div id="aboutme">
+        <h2>About Me</h2>    
+        <p>Hello, How are you?</p>
+    </div>
+    
+    <!----Projects---->
+    <div id="projects">
+        <h2>Projects</h2>
+        <p>Hello, How are you?</p>
+    </div>    
+
+    <!----Contact Me---->
+    <div id="contactme">
+        <h2>Contact Me</h2>
+        <p>Hello, How are you?</p>
+    </div>
+
 </body>
 </html>
