Added Mightnight Sun Images

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
         <div align="center">
             <div>
-                <img src="EFI.png" width="1020px" height="780px" id="efilogo">
+                <img src="EFI.png" id="efilogo">
                 <h3>Electronics for Imaging - Co-op QA Tester</h3>
                 <h4>November - December 2020</h4>
             </div> 
 
             <div>
-                <img src="Sun Life Financial.png" width="1200px" height="1200px" id="sunlifelogo">
+                <img src="Sun Life Financial.png" id="sunlifelogo">
                 <h3>Sunlife Financial - On-site Support Technician Co-op</h3>
                 <h4>January - May 2020</h4>
             </div>
@@ -87,14 +87,16 @@
 
             <div id="bmscarrier">
                 <h3>BMS Carrier</h3>
-                <!-- Add Image of BMS Carrier -->
+                <div align="center">
+                    <img src="BMS Carrier PCB sized.PNG" id="bmscarrierpcb">
+                    <img src="BMS Carrier Back PCB.PNG" id="bmscarrierbackpcb">
+                </div>
                 <h4></h4>
             </div>
-            <div id="bmscarrier">
+            <div id="connectorboard">
                 <h3>Connector Testing Board</h3>
-                <!-- Add Image of Connector Testing Board -->
-                <h4>With this project, I made a PCB that test the materials for connectors such as Molex Microfit, Ultrafit and Duraclik connectors, to determine which material would be used for all Midnight Sun PCB. I also made a <a href="Midnight Sun Connector List Rev 1.0 - Empty.xlsm">Excel File</a> to determine the amount of connector needed for all the boards for the team. </h4>
-                
+                <img src="Connector Testing Board PCB.PNG" id="connectorboardpcb">
+                <h4></h4>
             </div>
         </div>
 
