--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ul>
             <li>I am a Toronto Raptors fan and my favourite player on the roster is OG Anunoby</li>
         </ul>
-        <h3>If you want to know more about me, press the email icon on the top left or email me at <a href="mailto:r83huang@uwaterloo.ca">r83huang@uwaterloo.ca</a>!</h3>
+        <h3>If you want to know more about me, press the email icon on the top right or email me at <a href="mailto:r83huang@uwaterloo.ca">r83huang@uwaterloo.ca</a>!</h3>
         
         <br id="aboutmebr">
     </div>
@@ -134,7 +134,6 @@
                 <h3>Connector Testing Board</h3>
                 <div align="center">
                     <img src="Connector Testing Board PCB.PNG" id="connectorboardpcb">
-                    <img src="Connector Testing Board Excel File.PNG" id="connectorboardfile">
                 </div>
                 <h4 id="connectorboardtext">
                     With this project, I made a PCB that test the materials for connectors such as Molex Microfit, Ultrafit and Duraclik connectors, to determine which material would be used for all Midnight Sun PCB given how. I also made an <a href="Midnight Sun Connector List Rev 1.0 - Empty.xlsm">Excel File</a> to determine the amount of connector needed for all the boards for the team.
