--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <a href="https://www.linkedin.com/in/ricky-zi-an-huang/" target=_blank class="right-side" id="linkedinlogo"></a>
         <a href="https://www.github.com/Ricky-H142" target=_blank class="right-side" id="githublogo"></a>
-        <a href="mailto:r83huang@uwaterloo.ca" class="right-side" id="maillogo"></a>
+        <!---<a href="mailto:r83huang@uwaterloo.ca" class="right-side" id="maillogo"></a>--->
     </div>
 
     <!----Home---->
@@ -118,7 +118,7 @@
             <div id="bmscarrier">
                 <h3>BMS Carrier Rev. 2.1</h3>
                 <div align="center">
-                    <img src="BMS Carrier PCB sized.PNG" id="bmscarrierpcb">
+                    <!--<img src="BMS Carrier PCB sized.PNG" id="bmscarrierpcb">-->
                     <img src="BMS Carrier Back PCB.PNG" id="bmscarrierbackpcb">
                 </div>
                 <h4 id="bmscarriertext">
