--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div id="bmscarrier">
                 <h3>BMS Carrier Rev. 2.1</h3>
                 <div align="center">
-                    <<img src="BMS Carrier PCB sized.PNG" id="bmscarrierpcb">
+                    <<img src="BMS Carrier PCB sized.png" id="bmscarrierpcb">
                     <img src="BMS Carrier Back PCB.PNG" id="bmscarrierbackpcb">
                 </div>
                 <h4 id="bmscarriertext">
