--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <h3>Connector Testing Board</h3>
                 <div align="center">
                     <img src="Connector Testing Board PCB.PNG" id="connectorboardpcb">
+                    <img src="Connector Testing Board Excel File.PNG" id="connectorboardfile">
                 </div>
                 <h4 id="connectorboardtext">
                     With this project, I made a PCB that test the materials for connectors such as Molex Microfit, Ultrafit and Duraclik connectors, to determine which material would be used for all Midnight Sun PCB given how. I also made an <a href="Midnight Sun Connector List Rev 1.0 - Empty.xlsm">Excel File</a> to determine the amount of connector needed for all the boards for the team.
