--- a/index.html
+++ b/index.html
@@ -36,29 +36,30 @@
     <h1 id="top">TOP</h1>
 
     <div align="center" id="home">
-        <img> <!--Add Image of Yourself-->
+        <img src="me.jpg" id="me">
         <h1 id="name">Ricky Huang</h1>
-        <p></p>
     </div>
 
     <!----About Me---->
     <div id="aboutme">
         <h2>About Me</h2>    
-        <h3>Hi, I’m Ricky Huang and welcome to my website. Currently I am an electrical engineering student studying at the University of Waterloo. Some fun facts about me are that</h3> 
-        <ul>
-            <li>I have a big interest in hardware components and helping out my design team Midnight Sun</li>
-            <li>I like trying out new gadgets such as computers and smartphones</li>
-            <li>I speak english and cantonese fluently as well as a little bit of mandarin</li>
-            <li>I played the trumpet and the piano during high school</li>
+        <h3>Hi, I’m Ricky Huang and welcome to my website. Currently I am an electrical engineering student studying at the University of Waterloo. Some fun facts about me are that:</h3> 
+        <h4>
             <ul>
-                <li>I led the trumpet section in my highschool band, jazz band and orchestra ensemble</li>
+                <li>I have a big interest in hardware components and helping out my design team Midnight Sun</li>
+                <li>I like trying out new gadgets such as computers and smartphones</li>
+                <li>I speak english and cantonese fluently as well as a little bit of mandarin</li>
+                <li>I played the trumpet and the piano during high school</li>
+                <ul>
+                    <li>I led the trumpet section in my highschool band, jazz band and orchestra ensemble</li>
+                </ul>
+                <li>I listen to almost every type of genre of music (I have over 15 spotify playlist, each with a different genre)</li>
+                <ul>
+                    <li>Some of my favourite artist are Dreamville, Falcons and The Weeknd</li>
+                </ul>
+                <li>I am a Toronto Raptors fan and my favourite player on the roster is OG Anunoby</li>
             </ul>
-            <li>I listen to almost every type of genre of music (I have over 15 spotify playlist, each with a different genre)</li>
-            <ul>
-                <li>Some of my favourite artist are Dreamville, Falcons and The Weeknd</li>
-            </ul>
-            <li>I am a Toronto Raptors fan and my favourite player on the roster is OG Anunoby</li>
-        </ul>
+        </h4>
         <h3>If you want to know more about me, press the email icon on the top right or email me at <a href="mailto:r83huang@uwaterloo.ca">r83huang@uwaterloo.ca</a>!</h3>
         
         <br id="aboutmebr">
@@ -112,7 +113,7 @@
 
         <div id="midnightsun">
             <div align="center" id="midnightsuntitle">
-                <h3>Midnight Sun</h3>
+                <h2>Midnight Sun</h2>
             </div>
 
             <div id="bmscarrier">
@@ -144,7 +145,7 @@
 
         <div id="digitrecog">
             <div align="center" id="digitrecogtitle">
-                <a href="https://github.com/fofsfofs/Digit-Recog"><h3>Digit Recog</h3></a>
+                <a href="https://github.com/fofsfofs/Digit-Recog"><h2>Digit Recog</h2></a>
             </div>
             
             <div id="digitrecoggif">
