--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h1 id="top">TOP</h1>
 
     <div align="center" id="home">
-        <img src="me.jpg" id="me">
+        <img src="me.jpg" id="me" width="504" height="672">
         <h1 id="name">Ricky Huang</h1>
     </div>
 
