--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div id="resume">
         <h2>Resume</h2>
         <div align="center" id="resumepdf">
-            <embed src="Ricky Huang Resume V3 for Website.pdf#view=Fit" width="50%" height="850px" frameborder="0" scrolling="auto">
+            <embed src="Ricky Huang 2A Resume for Website.pdf#view=Fit" width="50%" height="850px" frameborder="0" scrolling="auto">
         </div>
     </div>    
 
